DEX-209 Plugin architecture in node
* Separate build.sbt for projects;
* ScalaJS version bumped 0.6.25 -> 0.6.26;