@@ -1,3 +1,14 @@
+enablePlugins(JmhPlugin)
+
+libraryDependencies += "org.scodec" %% "scodec-core" % "1.10.3"
+
+inTask(Compile / run)(
+  Seq(
+    fork := true,
+    javaOptions ++= ModernJavaSettings.options :+
+      s"-Dlogback.configurationFile=${(Compile / resourceDirectory).value / "logback.xml"}"
+  ))
+
 // https://github.com/ktoso/sbt-jmh#adding-to-your-project
 inConfig(Jmh)(
   Seq(
@@ -6,16 +17,6 @@ inConfig(Jmh)(
     dependencyClasspath := (Test / dependencyClasspath).value,
     // rewire tasks, so that 'jmh:run' automatically invokes 'jmh:compile' (otherwise a clean 'jmh:run' would fail)
     compile := compile.dependsOn(Test / compile).value,
-    run := run.dependsOn(Keys.compile).evaluated
+    run := run.dependsOn(compile).evaluated,
+    javaOptions ++= ModernJavaSettings.options
   ))
-
-Compile / run / fork := true
-Compile / run / javaOptions ++= Seq(
-  "-XX:+IgnoreUnrecognizedVMOptions",
-  "--add-modules=java.xml.bind",
-  s"-Dlogback.configurationFile=${(Compile / resourceDirectory).value / "logback.xml"}"
-)
-
-libraryDependencies += "org.scodec" %% "scodec-core" % "1.10.3"
-
-dependencyOverrides ++= Dependencies.EnforcedVersions.value
